-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.1
-
fa2965788 (13.0)
Code
CMakeLists.txt:
set_source_files_properties(MySingleton.qml PROPERTIES
QT_QML_SINGLETON_TYPE TRUE
)
qt_add_qml_module(appProjectWithQmlSingleton
URI ProjectWithQmlSingleton
VERSION 1.0
QML_FILES Main.qml MySingleton.qml
)
Steps to reproduce
In Qt Creator's Projects view, right-click "MySingleton.qml" and rename it to "ASingleton.qml"
Outcomes
- The entry in qt_add_qml_module() is renamed to "ASingleton.qml"(expected)
- The entry in set_source_files_properties() remains as "MySingleton.qml" (not expected). This leads to build errors.
| For Gerrit Dashboard: QTCREATORBUG-30174 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 553550,4 | CMakePM: Rename source files in set_source_files_properties calls | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |